@@ -1426,6 +1426,7 @@ public class TableConfigUtilsTest {
   }
 
   @Test
+  @SuppressWarnings("deprecation")
   public void testValidateFieldConfig() {
     Schema schema = new Schema.SchemaBuilder().setSchemaName(TABLE_NAME)
         .addDateTime(TIME_COLUMN, DataType.LONG, "1:HOURS:EPOCH", "1:HOURS")
@@ -1438,7 +1439,7 @@ public class TableConfigUtilsTest {
         .build();
 
     try {
-      FieldConfig fieldConfig = new FieldConfig("myCol1", FieldConfig.EncodingType.RAW, null, null, null, null, null);
+      FieldConfig fieldConfig = fieldConfigWithForwardEncoding("myCol1", FieldConfig.EncodingType.RAW);
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
     } catch (Exception e) {
@@ -1446,8 +1447,44 @@ public class TableConfigUtilsTest {
     }
 
     try {
-      FieldConfig fieldConfig =
-          new FieldConfig("myCol1", FieldConfig.EncodingType.RAW, null, null, CompressionCodec.DELTADELTA, null, null);
+      FieldConfig fieldConfig = new FieldConfig("myCol1", FieldConfig.EncodingType.RAW, null, null, null, null, null);
+      tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
+      TableConfigUtils.validate(tableConfig, schema);
+      fail("Should fail for deprecated field-level encoding type");
+    } catch (Exception e) {
+      assertEquals(e.getMessage(), "FieldConfig.encodingType is deprecated for column: myCol1. Use "
+          + "fieldConfigList[].indexes.forward.encodingType instead.");
+    }
+
+    try {
+      FieldConfig fieldConfig = new FieldConfig.Builder("myCol1")
+          .withCompressionCodec(CompressionCodec.SNAPPY)
+          .build();
+      tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
+      TableConfigUtils.validate(tableConfig, schema);
+      fail("Should fail for deprecated field-level compression codec");
+    } catch (Exception e) {
+      assertEquals(e.getMessage(), "FieldConfig.compressionCodec is deprecated for column: myCol1. Use "
+          + "fieldConfigList[].indexes.forward.compressionCodec instead.");
+    }
+
+    try {
+      FieldConfig fieldConfig = new FieldConfig.Builder("myCol1")
+          .withProperties(Map.of(FieldConfig.RAW_INDEX_WRITER_VERSION, "4"))
+          .build();
+      tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
+      TableConfigUtils.validate(tableConfig, schema);
+      fail("Should fail for deprecated field-level properties");
+    } catch (Exception e) {
+      assertEquals(e.getMessage(), "FieldConfig.properties is deprecated for column: myCol1. Move these settings into "
+          + "the relevant fieldConfigList[].indexes.<indexName> block instead.");
+    }
+
+    try {
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("myCol1", FieldConfig.EncodingType.RAW)
+          .withIndexes(withForwardCompression(indexesWithForwardEncoding(FieldConfig.EncodingType.RAW),
+              CompressionCodec.DELTADELTA))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
     } catch (Exception e) {
@@ -1456,8 +1493,10 @@ public class TableConfigUtilsTest {
     }
 
     try {
-      FieldConfig fieldConfig =
-          new FieldConfig("myCol2", FieldConfig.EncodingType.RAW, null, null, CompressionCodec.DELTADELTA, null, null);
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("myCol2", FieldConfig.EncodingType.RAW)
+          .withIndexes(withForwardCompression(indexesWithForwardEncoding(FieldConfig.EncodingType.RAW),
+              CompressionCodec.DELTADELTA))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
     } catch (Exception e) {
@@ -1466,31 +1505,30 @@ public class TableConfigUtilsTest {
     }
 
     try {
-      FieldConfig fieldConfig =
-          new FieldConfig("myCol1", FieldConfig.EncodingType.DICTIONARY, List.of(FieldConfig.IndexType.FST), null,
-              null);
+      FieldConfig fieldConfig = fieldConfigWithForwardEncoding("myCol1", FieldConfig.EncodingType.DICTIONARY);
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
-      fail("Should fail for with conflicting encoding type of myCol1");
+      fail("Should fail when forward DICTIONARY encoding conflicts with noDictionaryColumns");
     } catch (Exception e) {
-      assertEquals(e.getMessage(), "FieldConfig encoding type is different from indexingConfig for column: myCol1");
+      assertEquals(e.getMessage(), "Dictionary must be enabled for dictionary-encoded forward index column: myCol1");
     }
 
     // FST on RAW column is valid when explicit dictionary config is provided in indexes
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME).build();
     ObjectNode rawFstIndexes = JsonUtils.newObjectNode();
     rawFstIndexes.set("dictionary", JsonUtils.newObjectNode());
-    FieldConfig rawFstFieldConfig =
-        new FieldConfig("myCol1", FieldConfig.EncodingType.RAW, null, Arrays.asList(FieldConfig.IndexType.FST),
-            null, null, rawFstIndexes, null, null);
+    FieldConfig rawFstFieldConfig = new FieldConfig.Builder("myCol1")
+        .withIndexes(withForwardEncoding(rawFstIndexes, FieldConfig.EncodingType.RAW))
+        .withIndexTypes(Arrays.asList(FieldConfig.IndexType.FST))
+        .build();
     tableConfig.setFieldConfigList(Arrays.asList(rawFstFieldConfig));
     TableConfigUtils.validate(tableConfig, schema);
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME).build();
     try {
-      FieldConfig fieldConfig =
-          new FieldConfig("myCol2", FieldConfig.EncodingType.DICTIONARY, List.of(FieldConfig.IndexType.FST), null,
-              null);
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("myCol2", FieldConfig.EncodingType.DICTIONARY)
+          .withIndexTypes(Arrays.asList(FieldConfig.IndexType.FST))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
       fail("Should fail since FST index is enabled on multi value column");
@@ -1500,9 +1538,9 @@ public class TableConfigUtilsTest {
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME).build();
     try {
-      FieldConfig fieldConfig =
-          new FieldConfig("intCol", FieldConfig.EncodingType.DICTIONARY, List.of(FieldConfig.IndexType.FST), null,
-              null);
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("intCol", FieldConfig.EncodingType.DICTIONARY)
+          .withIndexTypes(Arrays.asList(FieldConfig.IndexType.FST))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
       fail("Should fail since FST index is enabled on non String column");
@@ -1514,8 +1552,9 @@ public class TableConfigUtilsTest {
         .setNoDictionaryColumns(Arrays.asList("myCol2", "intCol"))
         .build();
     try {
-      FieldConfig fieldConfig =
-          new FieldConfig("intCol", FieldConfig.EncodingType.RAW, List.of(FieldConfig.IndexType.TEXT), null, null);
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("intCol", FieldConfig.EncodingType.RAW)
+          .withIndexTypes(Arrays.asList(FieldConfig.IndexType.TEXT))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
       fail("Should fail since TEXT index is enabled on non String column");
@@ -1527,8 +1566,9 @@ public class TableConfigUtilsTest {
         .setNoDictionaryColumns(Arrays.asList("myCol1"))
         .build();
     try {
-      FieldConfig fieldConfig =
-          new FieldConfig("myCol21", FieldConfig.EncodingType.RAW, List.of(FieldConfig.IndexType.FST), null, null);
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("myCol21", FieldConfig.EncodingType.RAW)
+          .withIndexTypes(Arrays.asList(FieldConfig.IndexType.FST))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
       fail("Should fail since field name is not present in schema");
@@ -1538,8 +1578,11 @@ public class TableConfigUtilsTest {
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME).build();
     try {
-      FieldConfig fieldConfig = new FieldConfig("intCol", FieldConfig.EncodingType.DICTIONARY, List.of(),
-          CompressionCodec.SNAPPY, null);
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("intCol", FieldConfig.EncodingType.DICTIONARY)
+          .withIndexTypes(List.of())
+          .withIndexes(withForwardCompression(indexesWithForwardEncoding(FieldConfig.EncodingType.DICTIONARY),
+              CompressionCodec.SNAPPY))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
       fail("Should fail since dictionary encoding does not support compression codec SNAPPY");
@@ -1549,8 +1592,11 @@ public class TableConfigUtilsTest {
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME).build();
     try {
-      FieldConfig fieldConfig = new FieldConfig("intCol", FieldConfig.EncodingType.RAW, List.of(),
-          CompressionCodec.MV_ENTRY_DICT, null);
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("intCol", FieldConfig.EncodingType.RAW)
+          .withIndexTypes(List.of())
+          .withIndexes(withForwardCompression(indexesWithForwardEncoding(FieldConfig.EncodingType.RAW),
+              CompressionCodec.MV_ENTRY_DICT))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
       fail("Should fail since raw encoding does not support compression codec MV_ENTRY_DICT");
@@ -1564,10 +1610,9 @@ public class TableConfigUtilsTest {
     try {
       // Enable forward index disabled flag for a raw column. This should succeed as though the forward index cannot
       // be rebuilt without a dictionary, the constraint to have a dictionary has been lifted.
-      Map<String, String> fieldConfigProperties = new HashMap<>();
-      fieldConfigProperties.put(FieldConfig.FORWARD_INDEX_DISABLED, Boolean.TRUE.toString());
-      FieldConfig fieldConfig =
-          new FieldConfig("myCol1", FieldConfig.EncodingType.RAW, null, null, null, null, fieldConfigProperties);
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("myCol1", FieldConfig.EncodingType.RAW)
+          .withIndexes(indexesWithDisabledForwardIndex(FieldConfig.EncodingType.RAW))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
     } catch (Exception e) {
@@ -1578,10 +1623,9 @@ public class TableConfigUtilsTest {
       // Enable forward index disabled flag for a column without inverted index. This should succeed as though the
       // forward index cannot be rebuilt without an inverted index, the constraint to have an inverted index has been
       // lifted.
-      Map<String, String> fieldConfigProperties = new HashMap<>();
-      fieldConfigProperties.put(FieldConfig.FORWARD_INDEX_DISABLED, Boolean.TRUE.toString());
-      FieldConfig fieldConfig =
-          new FieldConfig("myCol2", FieldConfig.EncodingType.DICTIONARY, null, null, null, null, fieldConfigProperties);
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("myCol2", FieldConfig.EncodingType.DICTIONARY)
+          .withIndexes(indexesWithDisabledForwardIndex(FieldConfig.EncodingType.DICTIONARY))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
     } catch (Exception e) {
@@ -1590,8 +1634,6 @@ public class TableConfigUtilsTest {
 
     try {
       // Enable forward index disabled flag for a column and verify that dictionary override options are not set.
-      Map<String, String> fieldConfigProperties = new HashMap<>();
-      fieldConfigProperties.put(FieldConfig.FORWARD_INDEX_DISABLED, Boolean.TRUE.toString());
       tableConfig.getIndexingConfig().setOptimizeDictionaryForMetrics(true);
       tableConfig.getIndexingConfig().setOptimizeDictionaryForMetrics(true);
       TableConfigUtils.validate(tableConfig, schema);
@@ -1606,11 +1648,10 @@ public class TableConfigUtilsTest {
         .build();
     try {
       // Enable forward index disabled flag for a column with inverted index
-      Map<String, String> fieldConfigProperties = new HashMap<>();
-      fieldConfigProperties.put(FieldConfig.FORWARD_INDEX_DISABLED, Boolean.TRUE.toString());
-      FieldConfig fieldConfig =
-          new FieldConfig("myCol2", FieldConfig.EncodingType.DICTIONARY, FieldConfig.IndexType.INVERTED, null, null,
-              null, fieldConfigProperties);
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("myCol2", FieldConfig.EncodingType.DICTIONARY)
+          .withIndexTypes(Arrays.asList(FieldConfig.IndexType.INVERTED))
+          .withIndexes(indexesWithDisabledForwardIndex(FieldConfig.EncodingType.DICTIONARY))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
     } catch (Exception e) {
@@ -1624,11 +1665,10 @@ public class TableConfigUtilsTest {
         .build();
     try {
       // Enable forward index disabled flag for a column with inverted index and is sorted
-      Map<String, String> fieldConfigProperties = new HashMap<>();
-      fieldConfigProperties.put(FieldConfig.FORWARD_INDEX_DISABLED, Boolean.TRUE.toString());
-      FieldConfig fieldConfig =
-          new FieldConfig("myCol1", FieldConfig.EncodingType.DICTIONARY, FieldConfig.IndexType.INVERTED, null, null,
-              null, fieldConfigProperties);
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("myCol1", FieldConfig.EncodingType.DICTIONARY)
+          .withIndexTypes(Arrays.asList(FieldConfig.IndexType.INVERTED))
+          .withIndexes(indexesWithDisabledForwardIndex(FieldConfig.EncodingType.DICTIONARY))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
     } catch (Exception e) {
@@ -1642,12 +1682,10 @@ public class TableConfigUtilsTest {
         .build();
     try {
       // Enable forward index disabled flag for a multi-value column with inverted index and range index
-      Map<String, String> fieldConfigProperties = new HashMap<>();
-      fieldConfigProperties.put(FieldConfig.FORWARD_INDEX_DISABLED, Boolean.TRUE.toString());
-      FieldConfig fieldConfig =
-          new FieldConfig("myCol2", FieldConfig.EncodingType.DICTIONARY, FieldConfig.IndexType.INVERTED,
-              Arrays.asList(FieldConfig.IndexType.INVERTED, FieldConfig.IndexType.RANGE), null, null,
-              fieldConfigProperties);
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("myCol2", FieldConfig.EncodingType.DICTIONARY)
+          .withIndexTypes(Arrays.asList(FieldConfig.IndexType.INVERTED, FieldConfig.IndexType.RANGE))
+          .withIndexes(indexesWithDisabledForwardIndex(FieldConfig.EncodingType.DICTIONARY))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
       fail("Should fail for MV myCol2 with forward index disabled but has range and inverted index");
@@ -1662,12 +1700,10 @@ public class TableConfigUtilsTest {
         .build();
     try {
       // Enable forward index disabled flag for a singe-value column with inverted index and range index v1
-      Map<String, String> fieldConfigProperties = new HashMap<>();
-      fieldConfigProperties.put(FieldConfig.FORWARD_INDEX_DISABLED, Boolean.TRUE.toString());
-      FieldConfig fieldConfig =
-          new FieldConfig("myCol1", FieldConfig.EncodingType.DICTIONARY, FieldConfig.IndexType.INVERTED,
-              Arrays.asList(FieldConfig.IndexType.INVERTED, FieldConfig.IndexType.RANGE), null, null,
-              fieldConfigProperties);
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("myCol1", FieldConfig.EncodingType.DICTIONARY)
+          .withIndexTypes(Arrays.asList(FieldConfig.IndexType.INVERTED, FieldConfig.IndexType.RANGE))
+          .withIndexes(indexesWithDisabledForwardIndex(FieldConfig.EncodingType.DICTIONARY))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       tableConfig.getIndexingConfig().setRangeIndexVersion(1);
       TableConfigUtils.validate(tableConfig, schema);
@@ -1684,11 +1720,10 @@ public class TableConfigUtilsTest {
         .build();
     try {
       // Enable forward index disabled flag for a column with inverted index and disable dictionary
-      Map<String, String> fieldConfigProperties = new HashMap<>();
-      fieldConfigProperties.put(FieldConfig.FORWARD_INDEX_DISABLED, Boolean.TRUE.toString());
-      FieldConfig fieldConfig =
-          new FieldConfig("myCol2", FieldConfig.EncodingType.RAW, FieldConfig.IndexType.INVERTED, null, null, null,
-              fieldConfigProperties);
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("myCol2", FieldConfig.EncodingType.RAW)
+          .withIndexTypes(Arrays.asList(FieldConfig.IndexType.INVERTED))
+          .withIndexes(indexesWithDisabledForwardIndex(FieldConfig.EncodingType.RAW))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
       fail("Should not be able to disable dictionary but keep inverted index");
@@ -1700,10 +1735,9 @@ public class TableConfigUtilsTest {
     // producing a shared-dict + RAW forward index. No validation error expected.
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME).build();
     {
-      FieldConfig fieldConfig =
-          new FieldConfig.Builder("myCol2").withIndexTypes(Arrays.asList(FieldConfig.IndexType.INVERTED))
-              .withEncodingType(FieldConfig.EncodingType.RAW)
-              .build();
+      FieldConfig fieldConfig = fieldConfigBuilderWithForwardEncoding("myCol2", FieldConfig.EncodingType.RAW)
+          .withIndexTypes(Arrays.asList(FieldConfig.IndexType.INVERTED))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
     }
@@ -1713,11 +1747,10 @@ public class TableConfigUtilsTest {
         .build();
     try {
       // Enable forward index disabled flag for a column with FST index and disable dictionary
-      Map<String, String> fieldConfigProperties = new HashMap<>();
-      fieldConfigProperties.put(FieldConfig.FORWARD_INDEX_DISABLED, Boolean.TRUE.toString());
-      FieldConfig fieldConfigWithFst =
-          new FieldConfig("myCol2", FieldConfig.EncodingType.RAW, FieldConfig.IndexType.FST, null, null, null,
-              fieldConfigProperties);
+      FieldConfig fieldConfigWithFst = fieldConfigBuilderWithForwardEncoding("myCol2", FieldConfig.EncodingType.RAW)
+          .withIndexTypes(Arrays.asList(FieldConfig.IndexType.FST))
+          .withIndexes(indexesWithDisabledForwardIndex(FieldConfig.EncodingType.RAW))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfigWithFst));
       TableConfigUtils.validate(tableConfig, schema);
       fail("Should not be able to disable dictionary but keep FST index");
@@ -1734,11 +1767,10 @@ public class TableConfigUtilsTest {
         .build();
     try {
       // Enable forward index disabled flag for a column with FST index and disable dictionary
-      Map<String, String> fieldConfigProperties = new HashMap<>();
-      fieldConfigProperties.put(FieldConfig.FORWARD_INDEX_DISABLED, Boolean.TRUE.toString());
-      FieldConfig fieldConfigWithRange =
-          new FieldConfig("intCol", FieldConfig.EncodingType.RAW, FieldConfig.IndexType.RANGE, null, null, null,
-              fieldConfigProperties);
+      FieldConfig fieldConfigWithRange = fieldConfigBuilderWithForwardEncoding("intCol", FieldConfig.EncodingType.RAW)
+          .withIndexTypes(Arrays.asList(FieldConfig.IndexType.RANGE))
+          .withIndexes(indexesWithDisabledForwardIndex(FieldConfig.EncodingType.RAW))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfigWithRange));
       TableConfigUtils.validate(tableConfig, schema);
     } catch (Exception e) {
@@ -1753,13 +1785,12 @@ public class TableConfigUtilsTest {
         .build();
     try {
       // Enable forward index disabled flag for a column with inverted index index and disable dictionary
-      Map<String, String> fieldConfigProperties = new HashMap<>();
-      fieldConfigProperties.put(FieldConfig.FORWARD_INDEX_DISABLED, Boolean.TRUE.toString());
       ObjectNode indexes = JsonUtils.newObjectNode();
       indexes.set("dictionary", JsonUtils.newObjectNode());
-      FieldConfig realtimeFieldConfig =
-          new FieldConfig("intCol", FieldConfig.EncodingType.RAW, null, Arrays.asList(FieldConfig.IndexType.INVERTED),
-              null, null, indexes, fieldConfigProperties, null);
+      FieldConfig realtimeFieldConfig = new FieldConfig.Builder("intCol")
+          .withIndexes(withForwardDisabled(withForwardEncoding(indexes, FieldConfig.EncodingType.RAW)))
+          .withIndexTypes(Arrays.asList(FieldConfig.IndexType.INVERTED))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(realtimeFieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
     } catch (Exception e) {
@@ -1770,9 +1801,9 @@ public class TableConfigUtilsTest {
     // and validation passes — the runtime builds a shared-dict + RAW forward index.
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME).build();
     {
-      FieldConfig rawInvertedConfig =
-          new FieldConfig("intCol", FieldConfig.EncodingType.RAW,
-              Arrays.asList(FieldConfig.IndexType.INVERTED), null, null);
+      FieldConfig rawInvertedConfig = fieldConfigBuilderWithForwardEncoding("intCol", FieldConfig.EncodingType.RAW)
+          .withIndexTypes(Arrays.asList(FieldConfig.IndexType.INVERTED))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(rawInvertedConfig));
       TableConfigUtils.validate(tableConfig, schema);
     }
@@ -1782,9 +1813,10 @@ public class TableConfigUtilsTest {
     try {
       ObjectNode dictIndexes = JsonUtils.newObjectNode();
       dictIndexes.set("dictionary", JsonUtils.newObjectNode());
-      FieldConfig rawInvertedWithDictConfig =
-          new FieldConfig("intCol", FieldConfig.EncodingType.RAW, null,
-              Arrays.asList(FieldConfig.IndexType.INVERTED), null, null, dictIndexes, null, null);
+      FieldConfig rawInvertedWithDictConfig = new FieldConfig.Builder("intCol")
+          .withIndexes(withForwardEncoding(dictIndexes, FieldConfig.EncodingType.RAW))
+          .withIndexTypes(Arrays.asList(FieldConfig.IndexType.INVERTED))
+          .build();
       tableConfig.setFieldConfigList(Arrays.asList(rawInvertedWithDictConfig));
       TableConfigUtils.validate(tableConfig, schema);
     } catch (Exception e) {
@@ -1800,8 +1832,8 @@ public class TableConfigUtilsTest {
     final TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE)
         .setTableName(TABLE_NAME).build();
 
-    final FieldConfig fc1 = new FieldConfig("myCol1", FieldConfig.EncodingType.RAW, null, null, null, null, null);
-    final FieldConfig fc2 = new FieldConfig("myCol1", FieldConfig.EncodingType.RAW, null, null, null, null, null);
+    final FieldConfig fc1 = fieldConfigWithForwardEncoding("myCol1", FieldConfig.EncodingType.RAW);
+    final FieldConfig fc2 = fieldConfigWithForwardEncoding("myCol1", FieldConfig.EncodingType.RAW);
     tableConfig.setFieldConfigList(Arrays.asList(fc1, fc2));
 
     try {
@@ -1820,9 +1852,8 @@ public class TableConfigUtilsTest {
     final TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE)
         .setTableName(TABLE_NAME).build();
 
-    final FieldConfig fc1 = new FieldConfig("myCol1", FieldConfig.EncodingType.RAW, null, null, null, null, null);
-    final FieldConfig fc2 =
-        new FieldConfig("myCol1", FieldConfig.EncodingType.DICTIONARY, null, null, null, null, null);
+    final FieldConfig fc1 = fieldConfigWithForwardEncoding("myCol1", FieldConfig.EncodingType.RAW);
+    final FieldConfig fc2 = fieldConfigWithForwardEncoding("myCol1", FieldConfig.EncodingType.DICTIONARY);
     tableConfig.setFieldConfigList(Arrays.asList(fc1, fc2));
 
     try {
@@ -1845,10 +1876,9 @@ public class TableConfigUtilsTest {
     final ObjectNode indexes = JsonNodeFactory.instance.objectNode();
     indexes.set("forward", JsonNodeFactory.instance.objectNode().put("compressionCodec", "ZSTANDARD"));
     final FieldConfig fc1 = new FieldConfig.Builder("myCol1")
-        .withEncodingType(FieldConfig.EncodingType.RAW)
-        .withIndexes(indexes)
+        .withIndexes(withForwardEncoding(indexes, FieldConfig.EncodingType.RAW))
         .build();
-    final FieldConfig fc2 = new FieldConfig("myCol1", FieldConfig.EncodingType.RAW, null, null, null, null, null);
+    final FieldConfig fc2 = fieldConfigWithForwardEncoding("myCol1", FieldConfig.EncodingType.RAW);
     tableConfig.setFieldConfigList(Arrays.asList(fc1, fc2));
 
     try {
@@ -1868,9 +1898,8 @@ public class TableConfigUtilsTest {
     final TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE)
         .setTableName(TABLE_NAME).build();
 
-    final FieldConfig fc1 = new FieldConfig("myCol1", FieldConfig.EncodingType.RAW, null, null, null, null, null);
-    final FieldConfig fc2 =
-        new FieldConfig("myCol2", FieldConfig.EncodingType.DICTIONARY, null, null, null, null, null);
+    final FieldConfig fc1 = fieldConfigWithForwardEncoding("myCol1", FieldConfig.EncodingType.RAW);
+    final FieldConfig fc2 = fieldConfigWithForwardEncoding("myCol2", FieldConfig.EncodingType.DICTIONARY);
     tableConfig.setFieldConfigList(Arrays.asList(fc1, fc2));
 
     try {
@@ -1888,7 +1917,7 @@ public class TableConfigUtilsTest {
     final TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE)
         .setTableName(TABLE_NAME).build();
 
-    final FieldConfig fc1 = new FieldConfig("myCol1", FieldConfig.EncodingType.RAW, null, null, null, null, null);
+    final FieldConfig fc1 = fieldConfigWithForwardEncoding("myCol1", FieldConfig.EncodingType.RAW);
     tableConfig.setFieldConfigList(Arrays.asList(fc1));
 
     try {
@@ -1982,8 +2011,7 @@ public class TableConfigUtilsTest {
     TableConfig tableconfig3 = new TableConfigBuilder(TableType.REALTIME).setTableName(TABLE_NAME).build();
     ObjectNode indexesNode = JsonNodeFactory.instance.objectNode();
     indexesNode.putObject("bloom");
-    FieldConfig fieldConfig =
-        new FieldConfig("MyCol", FieldConfig.EncodingType.DICTIONARY, null, null, null, null, indexesNode, null, null);
+    FieldConfig fieldConfig = new FieldConfig.Builder("MyCol").withIndexes(indexesNode).build();
     tableconfig3.setFieldConfigList(Arrays.asList(fieldConfig));
     assertThrows(IllegalStateException.class, () -> TableConfigUtils.validate(tableconfig3, schema));
   }
@@ -3990,7 +4018,7 @@ public class TableConfigUtilsTest {
   @Test
   public void testOverwriteTableConfigForTierFastPathReturnsSameInstance() {
     FieldConfig col1 = new FieldConfig.Builder("col1")
-        .withEncodingType(FieldConfig.EncodingType.DICTIONARY)
+        .withIndexes(indexesWithForwardEncoding(FieldConfig.EncodingType.DICTIONARY))
         .build();
     TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME)
         .setFieldConfigList(List.of(col1))
@@ -4638,5 +4666,58 @@ public class TableConfigUtilsTest {
     } catch (IllegalStateException e) {
       assertTrue(e.getMessage().contains("metrics$v2"));
     }
+  }
+
+  private static FieldConfig fieldConfigWithForwardEncoding(String column, FieldConfig.EncodingType encodingType) {
+    return fieldConfigBuilderWithForwardEncoding(column, encodingType).build();
+  }
+
+  private static FieldConfig.Builder fieldConfigBuilderWithForwardEncoding(String column,
+      FieldConfig.EncodingType encodingType) {
+    return new FieldConfig.Builder(column).withIndexes(indexesWithForwardEncoding(encodingType));
+  }
+
+  private static ObjectNode indexesWithForwardEncoding(FieldConfig.EncodingType encodingType) {
+    return withForwardEncoding(JsonUtils.newObjectNode(), encodingType);
+  }
+
+  private static ObjectNode withForwardEncoding(ObjectNode indexes, FieldConfig.EncodingType encodingType) {
+    ObjectNode forward;
+    if (indexes.has("forward") && indexes.get("forward").isObject()) {
+      forward = (ObjectNode) indexes.get("forward");
+    } else {
+      forward = JsonUtils.newObjectNode();
+      indexes.set("forward", forward);
+    }
+    forward.put("encodingType", encodingType.name());
+    return indexes;
+  }
+
+  private static ObjectNode withForwardCompression(ObjectNode indexes, CompressionCodec compressionCodec) {
+    ObjectNode forward;
+    if (indexes.has("forward") && indexes.get("forward").isObject()) {
+      forward = (ObjectNode) indexes.get("forward");
+    } else {
+      forward = JsonUtils.newObjectNode();
+      indexes.set("forward", forward);
+    }
+    forward.put("compressionCodec", compressionCodec.name());
+    return indexes;
+  }
+
+  private static ObjectNode indexesWithDisabledForwardIndex(FieldConfig.EncodingType encodingType) {
+    return withForwardDisabled(indexesWithForwardEncoding(encodingType));
+  }
+
+  private static ObjectNode withForwardDisabled(ObjectNode indexes) {
+    ObjectNode forward;
+    if (indexes.has("forward") && indexes.get("forward").isObject()) {
+      forward = (ObjectNode) indexes.get("forward");
+    } else {
+      forward = JsonUtils.newObjectNode();
+      indexes.set("forward", forward);
+    }
+    forward.put("disabled", true);
+    return indexes;
   }
 }
